# Youtube-Video-API

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
app/: app.py  celery_worker.py
app/models/: elastic_schema.py  elastic_service.py  routes.py
app/services/: api.py  configs.py  routes.py
